--- a/dealerz-main/src/styles/partials/base/_variables.scss
+++ b/dealerz-main/src/styles/partials/base/_variables.scss
@@ -5,6 +5,8 @@
     --bg-color-2: #ffffff;
     --bg-color-3: #ffffff;
 
+    --navbar-color:#F86338;
+
     --main-color: #F86338;
     --main-color-2: #F86338;
 
